A/A.007/emptydir-default.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydir-default 
  labels:
    app: emptydir-default 
spec:
  containers:
  - name: emptydir-default 
    image: nginx 
    volumeMounts:
    - mountPath: /emptydir
      name: empty-directory 
  volumes:
  - name: empty-directory 
    emptyDir: {}
