A/A.007/emptydir-memory-10m.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-initcontainers 
  labels:
    app: nginx 
spec:
  containers:
  - name: web-page
    image: nginx 
    volumeMounts:
    - mountPath: /usr/share/nginx/html 
      name: empty-directory 
  volumes:
  - name: empty-directory 
    emptyDir:
      medium: Memory
      sizeLimit: "10Mi"
